--- a/Paper/Makefile
+++ b/Paper/Makefile
@@ -9,7 +9,7 @@ TEXT_PARTS_SRC_GENTEX=$(TEXT_PARTS_SRC_ROOT)
 
 MAINTEX=$(TEXT_PARTS_SRC_ROOT)/$(MAIN_NAME).tex
 MAINPDF=./$(MAIN_NAME).pdf
-REFERENCES=$(REFERENCES_NAME).bib
+REFERENCES=text/$(REFERENCES_NAME).bib
 TEXT_PARTS= 
 
 CODE_AGDA_SRC=../
