--- a/Paper/Makefile
+++ b/Paper/Makefile
@@ -29,6 +29,7 @@ CODE_AGDA_MODULES=Diffing/Universe/Syntax\
                   Diffing/Patches/Diff\
                   Diffing/Patches/Diff/D\
                   Diffing/Patches/Diff/Cost\
+                  Diffing/Patches/Diff/Id\
                   Diffing/Patches/Conflicts\
                   Diffing/Patches/Residual\
                   Diffing/Patches/Residual/Symmetry\
