a lot of changes in the paper

--- a/Paper/Makefile
+++ b/Paper/Makefile
@@ -25,6 +25,7 @@ CODE_AGDA_MODULES=Diffing/Universe/Syntax\
                   Diffing/Universe/Map\
                   Diffing/Universe/MuUtils\
                   Diffing/Universe/Measures\
+                  Diffing/Universe/Lab\
                   Diffing/Patches/IllDiff\
                   Diffing/Patches/Diff\
                   Diffing/Patches/Diff/D\
